--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
+    "pdfjs-dist": "^5.2.133",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.1.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "slugify": "^1.6.6",
