--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-pdf": "^9.2.1",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "slugify": "^1.6.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
