--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "pdfjs-dist": "^5.2.133",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
